// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}

.IS3 {
  margin-top: 5px;
  margin-right: 10px;
  margin-bottom: 5px;
  margin-left: 10px;
}

.IS4 {
  margin-bottom: 10px;
  width: 100%;
}
</style>

<Link>
  <div
    className="IS3"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      className="IS2 S3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </div>
  <div
    className="IS4"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</Link>
`;

exports[`2. lead one and one slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 5px;
}

.S5 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.S6 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S7 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}

.IS3 {
  margin-top: 5px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  margin-bottom: 10px;
  width: 100%;
}

.IS5 {
  color: rgba(29,29,27,1.00);
}

.IS6 {
  line-height: 22px;
}

.IS7 {
  margin-top: 5px;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="configweb__Base-kjGEdW cNGWYk configweb__Base-eXHdFh jFKTdO S2"
>
  <div
    className="responsiveweb__SliceContainer-kEikFj fWXWTf S2"
  >
    <div
      className="responsiveweb__Base-kQMzah cxejRh responsiveweb__Base-jXvbcq dmuCnu responsiveweb__Base-dIyxxW eFWEvM S2"
    >
      <div
        className="responsiveweb__Base-iFMijX gmChNY responsiveweb__Base-drDvXX xjUQC responsiveweb__Base-jIurKX hSGlCR S2"
      >
        <Link>
          <div
            className="IS3 S4"
          >
            <div
              className="S2"
            >
              <div
                className="IS1 S1"
              >
                ROYALS
              </div>
            </div>
            <h3
              aria-level="3"
              className="IS2 S3"
              role="heading"
            >
              Prince Philip ‘could be prosecuted’ over car crash
            </h3>
            <ArticleFlags
              flags={
                Array [
                  "NEW",
                ]
              }
            />
          </div>
          <div
            className="IS4"
          >
            <Image
              aspectRatio={1.7777777777777777}
              uri="https://img/someImage"
            />
          </div>
        </Link>
      </div>
      <div
        className="responsiveweb-fhQnWB dWVMyV S2"
      />
      <div
        className="responsiveweb__SupportsContainer-eXSNWD dpijfw S2"
      >
        <div
          className="responsiveweb-brngwq gvaiUN S2"
        >
          <Link>
            <div
              className="IS7 S4"
            >
              <div
                className="S2"
              >
                <div
                  className="IS5 S1"
                >
                  CYBER CRIME
                </div>
              </div>
              <h3
                aria-level="3"
                className="IS6 S5"
                role="heading"
              >
                GCHQ gives girls free cyber-classes to tackle gender gap
              </h3>
              <ArticleFlags
                flags={
                  Array [
                    "UPDATED",
                  ]
                }
              />
              <div
                className="S7"
              >
                <span
                  className="S6"
                >
                  
                  GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
                </span>
                <span
                  className="S6"
                >
                   
                  The intelligence
                  ...
                </span>
              </div>
            </div>
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. secondary one slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  font-size: 35px;
  line-height: 35px;
}

.IS3 {
  margin-top: 5px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  width: 100%;
}
</style>

<Link>
  <div
    className="IS3 S4"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      className="IS2 S3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </div>
  <div
    className="IS4 S5"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</Link>
`;

exports[`4. secondary four 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 5px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  color: rgba(0,91,141,1.00);
}

.IS3 {
  line-height: 22px;
}

.IS4 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS5 {
  border-left-width: 0.25px;
  margin-top: 5px;
  margin-right: 5px;
  margin-left: 5px;
}

.IS6 {
  width: 100%;
}

.IS7 {
  color: rgba(0,91,141,1.00);
}

.IS8 {
  line-height: 22px;
}

.IS9 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS10 {
  border-bottom-width: 0.5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 5px;
  margin-right: 5px;
  margin-left: 5px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  width: 100%;
}

.IS12 {
  color: rgba(0,91,141,1.00);
}

.IS13 {
  line-height: 22px;
}

.IS14 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS15 {
  border-left-width: 0.25px;
  margin-top: 5px;
  margin-right: 5px;
  margin-left: 5px;
}

.IS16 {
  width: 100%;
}

.IS17 {
  color: rgba(0,91,141,1.00);
}

.IS18 {
  line-height: 22px;
}

.IS19 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS20 {
  border-bottom-width: 0.5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 5px;
  margin-right: 5px;
  margin-left: 5px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS21 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<div
  className="IS21 S3"
>
  <div
    className="IS10 S5"
  >
    <div
      className="IS4 S3"
    >
      <Link
        url="/article/123"
      >
        <div
          className="IS1 S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS2 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="IS3 S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
    <div
      className="IS5 S5"
    />
    <div
      className="IS9 S3"
    >
      <Link
        url="/article/123"
      >
        <div
          className="IS6 S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS7 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="IS8 S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
  </div>
  <div
    className="IS20 S5"
  >
    <div
      className="IS14 S3"
    >
      <Link
        url="/article/123"
      >
        <div
          className="IS11 S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS12 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="IS13 S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
    <div
      className="IS15 S5"
    />
    <div
      className="IS19 S3"
    >
      <Link
        url="/article/123"
      >
        <div
          className="IS16 S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS17 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="IS18 S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </Link>
    </div>
  </div>
</div>
`;
